--- a/about/about.html
+++ b/about/about.html
@@ -20,7 +20,7 @@
     <section id="contenido">
         <div class="foto-container">
             <img src="imagen.png" alt="Foto de perfil">
-            <h2>👨‍💻 Ingeniero en Sistemas y Computación</h2>
+            <h2>👨‍💻 Ingeniero de Sistemas y Computación</h2>
         </div>
 
         <div class="texto-container">
