--- a/trucos-tecnicos/scripts/scripts.html
+++ b/trucos-tecnicos/scripts/scripts.html
@@ -10,9 +10,9 @@
 
     <nav>
         <ul>
-            <li><a href="../../index.html">Inicio</a></li>
-            <li><a href="../../about/about.html">Sobre Mí</a></li>
-            <li><a href="../../projects/projects.html">Proyectos</a></li>
+            <li><a href="../index.html">Inicio</a></li>
+            <li><a href="../about/about.html">Sobre Mí</a></li>
+            <li><a href="../projects/projects.html">Proyectos</a></li>
             <li><a href="scripts.html">Scripts Técnicos</a></li>
         </ul>
     </nav>
