--- a/trucos-tecnicos/scripts/scripts.html
+++ b/trucos-tecnicos/scripts/scripts.html
@@ -12,7 +12,7 @@
         <ul>
             <li><a href="../index.html">Inicio</a></li>
             <li><a href="../../about.html">Sobre Mí</a></li>
-            <li><a href="../projects.html">Proyectos</a></li>
+            <li><a href="../../projects.html">Proyectos</a></li>
             <li><a href="scripts.html">Scripts Técnicos</a></li>
         </ul>
     </nav>
