--- a/trucos-tecnicos/scripts/scripts.html
+++ b/trucos-tecnicos/scripts/scripts.html
@@ -12,7 +12,7 @@
         <ul>
             <li><a href="../../index.html">Inicio</a></li>
             <li><a href="../../about/about.html">Sobre Mí</a></li>
-            <li><a href="../../projects.html">Proyectos</a></li>
+            <li><a href="../../projects/projects.html">Proyectos</a></li>
             <li><a href="scripts.html">Scripts Técnicos</a></li>
         </ul>
     </nav>
@@ -24,9 +24,9 @@
         <button class="btn" onclick="toggleSection('redes')">🔍 Scripts de Redes</button>
         <div id="redes" class="categoria">
             <h2>🔹 Monitoreo de tráfico</h2>
-            <p>Aquí puedes agregar scripts relacionados con análisis de redes.</p>
+            <p>Aquí agregaré scripts relacionados con análisis de redes.</p>
             <pre>
-                <!-- Agrega tu código aquí -->
+                <!-- Mi código  -->
             </pre>
             <a href="https://github.com/TU_USUARIO/redes" class="btn">Ver código en GitHub</a>
         </div>
@@ -34,9 +34,9 @@
         <button class="btn" onclick="toggleSection('hacking')">🔒 Scripts de Hacking Ético</button>
         <div id="hacking" class="categoria">
             <h2>🛠 Fuerza Bruta en Login</h2>
-            <p>Aquí puedes agregar scripts relacionados con hacking ético.</p>
+            <p>Aquí agregaré scripts relacionados con hacking ético.</p>
             <pre>
-                <!-- Agrega tu código aquí -->
+                <!-- Mi código  -->
             </pre>
             <a href="https://github.com/TU_USUARIO/hacking" class="btn">Ver código en GitHub</a>
         </div>
@@ -44,9 +44,9 @@
         <button class="btn" onclick="toggleSection('automatizacion')">⚙️ Scripts de Automatización</button>
         <div id="automatizacion" class="categoria">
             <h2>🤖 Automatización de tareas</h2>
-            <p>Aquí puedes agregar scripts relacionados con automatización.</p>
+            <p>Aquí puedes agregaré scripts relacionados con automatización.</p>
             <pre>
-                <!-- Agrega tu código aquí -->
+                <!-- Mi código -->
             </pre>
             <a href="https://github.com/TU_USUARIO/automatizacion" class="btn">Ver código en GitHub</a>
         </div>
