--- a/trucos-tecnicos/windows/windows.html
+++ b/trucos-tecnicos/windows/windows.html
@@ -10,9 +10,9 @@
 
     <nav>
         <ul>
-            <li><a href="../index.html">Inicio</a></li>
-            <li><a href="../about/about.html">Sobre Mí</a></li>
-            <li><a href="../projects/projects.html">Proyectos</a></li>
+            <li><a href="../../index.html">Inicio</a></li>
+            <li><a href="../../about/about.html">Sobre Mí</a></li>
+            <li><a href="../../projects/projects.html">Proyectos</a></li>
             <li><a href="windows.html">Windows</a></li>
         </ul>
     </nav>
@@ -25,7 +25,7 @@
             <!-- Espacio para comandos -->
             <div class="comando">
                 <h2>⚙️ Administración del Sistema</h2>
-                <p>Aquí puedes agregar comandos relacionados con la gestión del sistema.</p>
+                <p>Aquí agregaré comandos relacionados con la gestión del sistema.</p>
                 <pre class="codigo">
                     <!-- Espacio para el comando -->
                 </pre>
@@ -36,7 +36,7 @@
 
             <div class="comando">
                 <h2>🔒 Seguridad y Hardening</h2>
-                <p>Aquí puedes agregar comandos relacionados con la protección y seguridad del sistema.</p>
+                <p>Aquí agregaré comandos relacionados con la protección y seguridad del sistema.</p>
                 <pre class="codigo">
                     <!-- Espacio para el comando -->
                 </pre>
@@ -47,7 +47,7 @@
 
             <div class="comando">
                 <h2>🚀 Optimización del Sistema</h2>
-                <p>Aquí puedes agregar comandos para mejorar el rendimiento del sistema.</p>
+                <p>Aquí agregaré comandos para mejorar el rendimiento del sistema.</p>
                 <pre class="codigo">
                     <!-- Espacio para el comando -->
                 </pre>
