--- a/trucos-tecnicos/hacking/hacking.html
+++ b/trucos-tecnicos/hacking/hacking.html
@@ -10,9 +10,9 @@
 
     <nav>
         <ul>
-            <li><a href="../../../index.html">Inicio</a></li>
-            <li><a href="../../../about/about.html">Sobre Mí</a></li>
-            <li><a href="../../../projects/projects.html">Proyectos</a></li>
+            <li><a href="../../index.html">Inicio</a></li>
+            <li><a href="../../about/about.html">Sobre Mí</a></li>
+            <li><a href="../../projects/projects.html">Proyectos</a></li>
             <li><a href="hacking.html">Hacking Ético</a></li>
         </ul>
     </nav>
@@ -24,7 +24,7 @@
         <!-- Publicación 1 -->
         <div class="publicacion">
             <h2>🛠 Pruebas de Penetración: Introducción</h2>
-            <p>Aquí puedes agregar información sobre metodologías y enfoques de pentesting.</p>
+            <p>Aquí agregaré información sobre metodologías y enfoques de pentesting.</p>
             <pre class="codigo">
                 <!-- Espacio para comandos o código -->
             </pre>
@@ -33,7 +33,7 @@
         <!-- Publicación 2 -->
         <div class="publicacion">
             <h2>⚡ Exploits y Vulnerabilidades</h2>
-            <p>Aquí puedes agregar información sobre análisis de vulnerabilidades y explotación.</p>
+            <p>Aquí agregaré información sobre análisis de vulnerabilidades y explotación.</p>
             <pre class="codigo">
                 <!-- Espacio para comandos o código -->
             </pre>
@@ -42,7 +42,7 @@
         <!-- Publicación 3 -->
         <div class="publicacion">
             <h2>🎭 Ingeniería Social y Seguridad Humana</h2>
-            <p>Aquí puedes agregar información sobre técnicas de manipulación psicológica y phishing.</p>
+            <p>Aquí agregaré información sobre técnicas de manipulación psicológica y phishing.</p>
             <pre class="codigo">
                 <!-- Espacio para comandos o código -->
             </pre>
