--- a/trucos-tecnicos/hacking/hacking.html
+++ b/trucos-tecnicos/hacking/hacking.html
@@ -13,7 +13,7 @@
             <li><a href="../../index.html">Inicio</a></li>
             <li><a href="../../about/about.html">Sobre Mí</a></li>
             <li><a href="../../projects/projects.html">Proyectos</a></li>
-            <li><a href="hacking.html">Hacking Ético</a></li>
+            <li><a href="trucostecnicos.html">Trucos Tecnicos</a></li>
         </ul>
     </nav>
 
