--- a/trucos-tecnicos/scripts/scripts.html
+++ b/trucos-tecnicos/scripts/scripts.html
@@ -13,7 +13,7 @@
             <li><a href="../../index.html">Inicio</a></li>
             <li><a href="../../about/about.html">Sobre Mí</a></li>
             <li><a href="../../projects/projects.html">Proyectos</a></li>
-            <li><a href="trucostecnicos.html">Trucos Técnicos</a></li>
+            <li><a href="../trucostecnicos.html">Trucos Técnicos</a></li>
         </ul>
     </nav>
 
