--- a/trucos-tecnicos/hacking/hacking.html
+++ b/trucos-tecnicos/hacking/hacking.html
@@ -23,12 +23,12 @@
 
         <!-- Publicación 1 -->
         <div class="publicacion">
-            <h2>🛠 Simulación de Ataque DoS al Panel Web de un Router Vulnerable (CVE-2011-3192)</h2>
+            <h2>🛠 Vulnerabilidades encontradas</h2>
             <p>Aquí agregaré información sobre metodologías y enfoques de pentesting.</p>
             <pre class="codigo">
                 <div class="publicacion">
-                    <h2>📹 Video Explicativo</h2>
-                    <p>Demostración sobre seguridad ofensiva y pruebas de penetración.</p>
+                    <h2>📹 Simulación de Ataque DoS al Panel Web de un Router Vulnerable (CVE-2011-3192)</h2>
+                    <p>Explotando vulnerabilidad en nuestro router.</p>
                     <iframe src="https://player.vimeo.com/video/1089257912" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
                 </div>
 
