--- a/trucos-tecnicos/linux/linux.html
+++ b/trucos-tecnicos/linux/linux.html
@@ -25,7 +25,7 @@
             <!-- Espacio para comandos -->
             <div class="comando">
                 <h2>⚙️ Gestión del Sistema</h2>
-                <p>Aquí puedes agregar comandos relacionados con la administración del sistema.</p>
+                <p>Aquí agregaré comandos relacionados con la administración del sistema.</p>
                 <pre class="codigo">
                     <!-- Espacio para el comando -->
                 </pre>
@@ -36,7 +36,7 @@
 
             <div class="comando">
                 <h2>🔒 Seguridad y Hardening</h2>
-                <p>Aquí puedes agregar comandos relacionados con protección y seguridad en Linux.</p>
+                <p>Aquí agregaré comandos relacionados con protección y seguridad en Linux.</p>
                 <pre class="codigo">
                     <!-- Espacio para el comando -->
                 </pre>
@@ -47,7 +47,7 @@
 
             <div class="comando">
                 <h2>🚀 Optimización y Rendimiento</h2>
-                <p>Aquí puedes agregar comandos para mejorar la eficiencia del sistema.</p>
+                <p>Aquí agregaré comandos comandos para mejorar la eficiencia del sistema.</p>
                 <pre class="codigo">
                     <!-- Espacio para el comando -->
                 </pre>
